--- a/final-project/package.json
+++ b/final-project/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.1.0",
+    "bcryptjs": "^2.4.3",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.4",
+    "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
