--- a/final-project/package.json
+++ b/final-project/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "eslint-config-next": "14.1.4",
+    "sass": "^1.74.1"
   }
 }
