--- a/final-project/package.json
+++ b/final-project/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@tabler/icons-react": "^3.1.0",
     "bcryptjs": "^2.4.3",
+    "formik": "^2.4.5",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
