--- a/final-project/package.json
+++ b/final-project/package.json
@@ -14,7 +14,7 @@
     "formik": "^2.4.5",
     "mongodb": "^6.5.0",
     "mongoose": "^8.2.4",
-    "next": "14.1.4",
+    "next": "^14.1.4",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
