--- a/final-project/package.json
+++ b/final-project/package.json
@@ -18,8 +18,7 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
