--- a/final-project/package.json
+++ b/final-project/package.json
@@ -19,6 +19,7 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-international-phone": "^4.2.6",
     "react-select": "^5.8.0",
     "swiper": "^11.1.0",
     "yup": "^1.4.0"
